update balcony service:

--- a/smartHome-webapp/src/main/resources/application-local.properties
+++ b/smartHome-webapp/src/main/resources/application-local.properties
@@ -8,5 +8,8 @@ spring.datasource.username=masterUser
 spring.datasource.password=
 spring.datasource.driver-class-name=org.postgresql.Driver
 
+#Disable warning
+spring.jpa.properties.hibernate.temp.use_jdbc_metadata_defaults=false
+
 # logging configuration
 logging.level.=INFO
