--- a/smartHome-flat1/pom.xml
+++ b/smartHome-flat1/pom.xml
@@ -23,7 +23,7 @@
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 		<maven.compiler.source>1.8</maven.compiler.source>
 		<maven.compiler.target>1.8</maven.compiler.target>
-		<start-class>com.smartHome.flat.radio.Application</start-class>
+		<start-class>com.smartHome.flat.Application</start-class>
 		<jdk.version>1.8</jdk.version>
 		<main.basedir>${basedir}/../..</main.basedir>
 	</properties>
@@ -78,6 +78,13 @@
 			<artifactId>log4j</artifactId>
 			<version>1.2.17</version>
 		</dependency>
+		
+		<!-- JACKSON -->
+		<dependency>
+			<groupId>com.fasterxml.jackson.core</groupId>
+			<artifactId>jackson-databind</artifactId>
+			<version>2.9.7</version>
+		</dependency>
 
 	</dependencies>
 
@@ -87,7 +94,7 @@
 				<groupId>org.springframework.boot</groupId>
 				<artifactId>spring-boot-maven-plugin</artifactId>
 				<configuration>
-					<mainClass>com.smartHome.flat.balcony.BalconyApplication</mainClass>
+					<mainClass>com.smartHome.flat.Application</mainClass>
 				</configuration>
 				<executions>
 					<execution>
