--- a/smartHome-balcony/pom.xml
+++ b/smartHome-balcony/pom.xml
@@ -87,11 +87,20 @@
 			<version>1.5.5</version>
 		</dependency>
 
+		<!-- Logovanie -->
 		<dependency>
 			<groupId>log4j</groupId>
 			<artifactId>log4j</artifactId>
 			<version>1.2.17</version>
 		</dependency>
+
+		<!-- Automatizovane testy -->
+		<dependency>
+			<groupId>com.jayway.restassured</groupId>
+			<artifactId>rest-assured</artifactId>
+			<version>2.9.0</version>
+		</dependency>
+		
 
 	</dependencies>
 
